// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuritySectionContainer should fallback to default form values 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-7 StandardCard css-bhp9pd-MuiPaper-root-MuiCard-root"
        data-testid="record-security-card"
        id="record-security-card"
      >
        <div
          class="MuiCardHeader-root makeStyles-cardHeaderAccent-10 css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title makeStyles-responsiveHeader-12 css-1hzv55z-MuiTypography-root"
              data-testid="record-security-card-header"
              id="record-security-card-header"
            >
              <span>
                <strong>
                  Work
                </strong>
                 level security - 
                UQ:123457
              </span>
            </h4>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="record-security-card-content"
          data-testid="record-security-card-content"
          id="record-security-card-content"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
                  style="margin-top: -8px;"
                >
                  Inherited security policy details
                </h6>
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
                    >
                      Test collection
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
                    >
                      undefined
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                    >
                      Theses Assessors (2)
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SecuritySectionContainer should mount with default props for a collection for a super admin 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-13 StandardCard css-bhp9pd-MuiPaper-root-MuiCard-root"
        data-testid="record-security-card"
        id="record-security-card"
      >
        <div
          class="MuiCardHeader-root makeStyles-cardHeaderAccent-16 css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title makeStyles-responsiveHeader-18 css-1hzv55z-MuiTypography-root"
              data-testid="record-security-card-header"
              id="record-security-card-header"
            >
              <span>
                <strong>
                  Collection
                </strong>
                 level security - 
                UQ:123458
              </span>
            </h4>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="record-security-card-content"
          data-testid="record-security-card-content"
          id="record-security-card-content"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1hgiswi-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                />
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  style="margin-top: 12px; padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
                    style="margin-top: -8px;"
                  >
                    Current collection level security policy details
                  </h6>
                  <div
                    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
                    style="margin-top: 8px;"
                  >
                    <div
                      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-1oua83y-MuiGrid2-root"
                    >
                      <b>
                        Name (ID):
                      </b>
                    </div>
                    <div
                      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-10 css-bw3u2n-MuiGrid2-root"
                    >
                      Public (5)
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1hgiswi-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                />
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                  style="margin-top: 12px; padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
                    style="margin-top: -8px;"
                  >
                    <span>
                      Current collection 
                      <b>
                        datastream
                      </b>
                       level security policy details
                    </span>
                  </h6>
                  <div
                    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
                    style="margin-top: 8px;"
                  >
                    <div
                      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-1oua83y-MuiGrid2-root"
                    >
                      <b>
                        Name (ID):
                      </b>
                    </div>
                    <div
                      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-10 css-bw3u2n-MuiGrid2-root"
                    >
                      Public (5)
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SecuritySectionContainer should mount with default props for a record 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-x3vexg-MuiGrid2-root"
  >
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 StandardCard css-bhp9pd-MuiPaper-root-MuiCard-root"
        data-testid="record-security-card"
        id="record-security-card"
      >
        <div
          class="MuiCardHeader-root makeStyles-cardHeaderAccent-4 css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title makeStyles-responsiveHeader-6 css-1hzv55z-MuiTypography-root"
              data-testid="record-security-card-header"
              id="record-security-card-header"
            >
              <span>
                <strong>
                  Work
                </strong>
                 level security - 
                UQ:123456
              </span>
            </h4>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="record-security-card-content"
          data-testid="record-security-card-content"
          id="record-security-card-content"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-ckkhel-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
                  style="margin-top: -8px;"
                >
                  Inherited security policy details
                </h6>
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
                    >
                      Test collection
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
                    >
                      undefined
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                    >
                      Theses Assessors (2)
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 StandardCard css-bhp9pd-MuiPaper-root-MuiCard-root"
        data-testid="datastream-security-card"
        id="datastream-security-card"
      >
        <div
          class="MuiCardHeader-root makeStyles-cardHeaderAccent-4 css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title makeStyles-responsiveHeader-6 css-1hzv55z-MuiTypography-root"
              data-testid="datastream-security-card-header"
              id="datastream-security-card-header"
            >
              <span>
                <strong>
                  Datastream
                </strong>
                 level security - 
                UQ:123456
              </span>
            </h4>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="datastream-security-card-content"
          data-testid="datastream-security-card-content"
          id="datastream-security-card-content"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-8bk111-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
                style="padding: 24px; background-color: rgba(0, 0, 0, 0.05);"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
                  style="margin-top: -8px;"
                >
                  Inherited datastream security policy details
                </h6>
                <div
                  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-1 css-1urk9zy-MuiGrid2-root"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-2 css-asmogt-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle1 css-qw7qxe-MuiTypography-root"
                    >
                      Test collection
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-7 css-zf6jg7-MuiGrid2-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-x1voni-MuiTypography-root"
                    >
                      undefined
                    </h6>
                  </div>
                  <div
                    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-3 css-b5eswy-MuiGrid2-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
                    >
                      Administrators (1)
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
